ex6/testdata/typechecker/error/NewTest-err2.java
class NewTest {
	public static void main(String[] a){
            A x;
            x = new C(); //TE
	}
}

class A {}

class C{}